css/style.css
/* ... */
.main-header .header-upper .upper-right {
    position: relative;
    padding-top: 30px;
}

.main-header .info-box {
    position: relative;
    float: left;
    padding-left: 100px;
    margin-left: 30px;
    min-height: 50px;
    border-left: 1px solid #f2f2f2;
}

.main-header .info-box:first-child {
    border-left: 0;
}

.main-header .info-box .icon-box {
    position: absolute;
    left: 30px;
    top: 0px;
    color: #ffda15;
    font-size: 46px;
    line-height: 50px;
    -moz-transition: all 300ms ease;
    -webkit-transition: all 300ms ease;
    -ms-transition: all 300ms ease;
    -o-transition: all 300ms ease;
    transition: all 300ms ease;
}

.main-header .info-box li {
    position: relative;
    font-size: 15px;
    line-height: 25px;
    color: #848484;
    font-weight: 400;
    text-transform: capitalize;
}

.main-header .info-box strong {
    position: relative;
    font-weight: 600;
    color: #848484;
}

.main-header .info-box .order-btn {
    position: relative;
    line-height: 24px;
    color: #333333;
    font-size: 16px;
    font-weight: 600;
    padding: 8px 16px;
    background: #ffda15;
    border-radius: 3px;
}

.main-header .info-box .order-btn:hover {
    opacity: 0.70;
}

.main-header.style-two .info-box:last-child {
    border-left: 0;
    padding-left: 0;
}

.main-header.style-two .info-box .social-icons a {
    display: inline-block;
    vertical-align: middle;
    width: 42px;
    height: 42px;
    border-radius: 50%;
    border: 1px solid #F2F2F2;
    transition: all .4s ease;
    color: #808080;
    font-size: 14px;
    text-align: center;
    line-height: 40px;
}

.main-header.style-two .info-box .social-icons a:hover {
    color: #ffda15;
}

.main-header.style-two .info-box .social-icons a+a {
    margin-left: 12px;
}

.main-header.style-two .logo-outer {
    -webkit-box-shadow: none;
    box-shadow: none;
    border: 1px solid #F3F3F3;
    border-top: 0;
    border-bottom: 0;
}


/*=== Header Upper ===*/

.main-header .header-lower {
    position: absolute;
    top: 100%;
    width: 100%;
    z-index: 5;
    background-color: #f0f0f5;
}

.main-header .nav-outer {
    position: relative;
    border-bottom: 1px solid rgba(255, 255, 255, .10);
}

.main-menu {
    position: relative;
    float: left;
}

.main-menu .navbar-collapse {
    padding: 0px;
}

.main-menu .navigation {
    position: relative;
    margin: 0px;
    font-family: "Ubuntu", sans-serif;
    background: #822468;
}

.main-menu .navigation>li {
    position: relative;
    float: left;
    margin-right: 40px;
}

.main-menu .navigation>li:last-child {
    margin-right: 0px;
}

.main-menu .navigation>li>a {
    position: relative;
    display: block;
    font-size: 16px;
    color: #fff;
    line-height: 30px;
    font-weight: 700;
    opacity: 1;
    padding: 25px 0px 30px;
    transition: all 500ms ease;
    -moz-transition: all 500ms ease;
    -webkit-transition: all 500ms ease;
    -ms-transition: all 500ms ease;
    -o-transition: all 500ms ease;
}

.main-menu .navigation>li>a:before {
    position: absolute;
    display: inline-block;
    left: 0;
    bottom: -1px;
    height: 1px;
    width: 100%;
    background-color: #ffda15;
    z-index: 1;
    content: "";
    -webkit-transition: -webkit-transform 0.4s ease;
    transition: -webkit-transform 0.4s ease;
    transition: transform 0.4s ease;
    transition: transform 0.4s ease,
        -webkit-transform 0.4s ease;
    -webkit-transform: scale(0, 1);
    -ms-transform: scale(0, 1);
    transform: scale(0, 1);
    -webkit-transform-origin: right center;
    -ms-transform-origin: right center;
    transform-origin: right center;
}

.main-menu .navigation>li:hover a:before,
.main-menu .navigation>li.current a:before {
    -webkit-transform: scale(1, 1);
    -ms-transform: scale(1, 1);
    transform: scale(1, 1);
    -webkit-transform-origin: left center;
    -ms-transform-origin: left center;
    transform-origin: left center;
}

.main-menu .navigation>li:hover>a,
.main-menu .navigation>li.current>a,
.main-menu .navigation>li.current-menu-item>a {
    opacity: 1;
    color: #ffda15;
}

.main-menu .navigation>li:hover>a:after {
    opacity: 1;
}

.main-menu .navigation>li>ul {
    position: absolute;
    left: 0px;
    top: 100%;
    margin-top: 10px;
    width: 260px;
    padding: 0px 25px;
    z-index: 100;
    display: none;
    background: #ffffff;
    -webkit-transform: scaleY(0);
    -ms-transform: scaleY(0);
    -moz-transform: scaleY(0);
    transform: scaleY(0);
    -webkit-transform-origin: top;
    -ms-transform-origin: top;
    -moz-transform-origin: top;
    transform-origin: top;
    transition: all 500ms ease;
    -moz-transition: all 500ms ease;
    -webkit-transition: all 500ms ease;
    -ms-transition: all 500ms ease;
    -o-transition: all 500ms ease;
    -webkit-box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05), -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
    -ms-box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05), -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
    -o-box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05), -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
    -moz-box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05), -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05), -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
}

.main-menu .navigation>li>ul:before {
    content: '';
    position: absolute;
    left: 0px;
    top: -10px;
    width: 100%;
    height: 10px;
    z-index: 1;
}

.main-menu .navigation>li>ul.from-right {
    left: auto;
    right: 0px;
}

.main-menu .navigation>li>ul>li {
    position: relative;
    width: 100%;
    padding: 9px 0;
    border-top: 1px solid #f2f2f2;
    border-bottom: 1px solid #f2f2f2;
}

.main-menu .navigation>li>ul>li:first-child {
    border-top: 0;
}

.main-menu .navigation>li>ul>li:last-child {
    border-bottom: 0;
}
/* ... */

